# serializer version: 1
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.1
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.10
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.11
  '''
  SELECT "markettor_organizationmembership"."id",
         "markettor_organizationmembership"."organization_id",
         "markettor_organizationmembership"."user_id",
         "markettor_organizationmembership"."level",
         "markettor_organizationmembership"."joined_at",
         "markettor_organizationmembership"."updated_at",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organizationmembership"
  INNER JOIN "markettor_organization" ON ("markettor_organizationmembership"."organization_id" = "markettor_organization"."id")
  WHERE "markettor_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.12
  '''
  SELECT COUNT(*) AS "__count"
  FROM "markettor_annotation"
  WHERE (NOT "markettor_annotation"."deleted"
         AND (("markettor_annotation"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
               AND "markettor_annotation"."scope" = 'organization')
              OR "markettor_annotation"."team_id" = 2))
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.13
  '''
  SELECT "markettor_annotation"."id",
         "markettor_annotation"."content",
         "markettor_annotation"."created_at",
         "markettor_annotation"."updated_at",
         "markettor_annotation"."dashboard_item_id",
         "markettor_annotation"."dashboard_id",
         "markettor_annotation"."team_id",
         "markettor_annotation"."organization_id",
         "markettor_annotation"."created_by_id",
         "markettor_annotation"."scope",
         "markettor_annotation"."creation_type",
         "markettor_annotation"."date_marker",
         "markettor_annotation"."deleted",
         "markettor_annotation"."apply_all",
         "markettor_dashboarditem"."id",
         "markettor_dashboarditem"."name",
         "markettor_dashboarditem"."derived_name",
         "markettor_dashboarditem"."description",
         "markettor_dashboarditem"."team_id",
         "markettor_dashboarditem"."filters",
         "markettor_dashboarditem"."filters_hash",
         "markettor_dashboarditem"."query",
         "markettor_dashboarditem"."order",
         "markettor_dashboarditem"."deleted",
         "markettor_dashboarditem"."saved",
         "markettor_dashboarditem"."created_at",
         "markettor_dashboarditem"."refreshing",
         "markettor_dashboarditem"."created_by_id",
         "markettor_dashboarditem"."is_sample",
         "markettor_dashboarditem"."short_id",
         "markettor_dashboarditem"."favorited",
         "markettor_dashboarditem"."refresh_attempt",
         "markettor_dashboarditem"."last_modified_at",
         "markettor_dashboarditem"."last_modified_by_id",
         "markettor_dashboarditem"."dashboard_id",
         "markettor_dashboarditem"."last_refresh",
         "markettor_dashboarditem"."layouts",
         "markettor_dashboarditem"."color",
         "markettor_dashboarditem"."dive_dashboard_id",
         "markettor_dashboarditem"."updated_at",
         "markettor_dashboarditem"."deprecated_tags",
         "markettor_dashboarditem"."tags",
         "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."requested_password_reset_at",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_annotation"
  LEFT OUTER JOIN "markettor_dashboarditem" ON ("markettor_annotation"."dashboard_item_id" = "markettor_dashboarditem"."id")
  LEFT OUTER JOIN "markettor_user" ON ("markettor_annotation"."created_by_id" = "markettor_user"."id")
  WHERE (NOT "markettor_annotation"."deleted"
         AND (("markettor_annotation"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
               AND "markettor_annotation"."scope" = 'organization')
              OR "markettor_annotation"."team_id" = 2))
  ORDER BY "markettor_annotation"."date_marker" DESC
  LIMIT 1000
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.2
  '''
  SELECT "markettor_organizationmembership"."id",
         "markettor_organizationmembership"."organization_id",
         "markettor_organizationmembership"."user_id",
         "markettor_organizationmembership"."level",
         "markettor_organizationmembership"."joined_at",
         "markettor_organizationmembership"."updated_at",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organizationmembership"
  INNER JOIN "markettor_organization" ON ("markettor_organizationmembership"."organization_id" = "markettor_organization"."id")
  WHERE "markettor_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.3
  '''
  SELECT COUNT(*) AS "__count"
  FROM "markettor_annotation"
  WHERE (NOT "markettor_annotation"."deleted"
         AND (("markettor_annotation"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
               AND "markettor_annotation"."scope" = 'organization')
              OR "markettor_annotation"."team_id" = 2))
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.4
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.5
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.6
  '''
  SELECT "markettor_organizationmembership"."id",
         "markettor_organizationmembership"."organization_id",
         "markettor_organizationmembership"."user_id",
         "markettor_organizationmembership"."level",
         "markettor_organizationmembership"."joined_at",
         "markettor_organizationmembership"."updated_at",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organizationmembership"
  INNER JOIN "markettor_organization" ON ("markettor_organizationmembership"."organization_id" = "markettor_organization"."id")
  WHERE "markettor_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.7
  '''
  SELECT COUNT(*) AS "__count"
  FROM "markettor_annotation"
  WHERE (NOT "markettor_annotation"."deleted"
         AND (("markettor_annotation"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
               AND "markettor_annotation"."scope" = 'organization')
              OR "markettor_annotation"."team_id" = 2))
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.8
  '''
  SELECT "markettor_annotation"."id",
         "markettor_annotation"."content",
         "markettor_annotation"."created_at",
         "markettor_annotation"."updated_at",
         "markettor_annotation"."dashboard_item_id",
         "markettor_annotation"."dashboard_id",
         "markettor_annotation"."team_id",
         "markettor_annotation"."organization_id",
         "markettor_annotation"."created_by_id",
         "markettor_annotation"."scope",
         "markettor_annotation"."creation_type",
         "markettor_annotation"."date_marker",
         "markettor_annotation"."deleted",
         "markettor_annotation"."apply_all",
         "markettor_dashboarditem"."id",
         "markettor_dashboarditem"."name",
         "markettor_dashboarditem"."derived_name",
         "markettor_dashboarditem"."description",
         "markettor_dashboarditem"."team_id",
         "markettor_dashboarditem"."filters",
         "markettor_dashboarditem"."filters_hash",
         "markettor_dashboarditem"."query",
         "markettor_dashboarditem"."order",
         "markettor_dashboarditem"."deleted",
         "markettor_dashboarditem"."saved",
         "markettor_dashboarditem"."created_at",
         "markettor_dashboarditem"."refreshing",
         "markettor_dashboarditem"."created_by_id",
         "markettor_dashboarditem"."is_sample",
         "markettor_dashboarditem"."short_id",
         "markettor_dashboarditem"."favorited",
         "markettor_dashboarditem"."refresh_attempt",
         "markettor_dashboarditem"."last_modified_at",
         "markettor_dashboarditem"."last_modified_by_id",
         "markettor_dashboarditem"."dashboard_id",
         "markettor_dashboarditem"."last_refresh",
         "markettor_dashboarditem"."layouts",
         "markettor_dashboarditem"."color",
         "markettor_dashboarditem"."dive_dashboard_id",
         "markettor_dashboarditem"."updated_at",
         "markettor_dashboarditem"."deprecated_tags",
         "markettor_dashboarditem"."tags",
         "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."requested_password_reset_at",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_annotation"
  LEFT OUTER JOIN "markettor_dashboarditem" ON ("markettor_annotation"."dashboard_item_id" = "markettor_dashboarditem"."id")
  LEFT OUTER JOIN "markettor_user" ON ("markettor_annotation"."created_by_id" = "markettor_user"."id")
  WHERE (NOT "markettor_annotation"."deleted"
         AND (("markettor_annotation"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
               AND "markettor_annotation"."scope" = 'organization')
              OR "markettor_annotation"."team_id" = 2))
  ORDER BY "markettor_annotation"."date_marker" DESC
  LIMIT 1000
  '''
# ---
# name: TestAnnotation.test_retrieving_annotation_is_not_n_plus_1.9
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
